BUX FIX: Bug fixed regarding folder-path errors, displayRegisterWindow now works

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "python.analysis.extraPaths": [
-        "./Views"
+        "./Views",
+        "./Controller",
+        "./Utility"
     ]
 }
